[metadata]
name = libtrivy
version = attr: libtrivy.__version__
description = Python wrapper for Trivy
long_description = file: README.md
license = Proprietary
author = Cloves Almeida
author-email = almeida.cloves@bcg.com
url = https://github.com/cjalmeida/libtrivy
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
packages = find:
package_dir =
    =python


[options.packages.find]
where = python

[options.package_data]
libtrivy = *.so

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[flake8]
exclude = docs,.git,tmp,.venv,build,dist
max-line-length = 88
extend-ignore = F811

[tool:pytest]
addopts = --cov=gamma --cov-report term --cov-report xml:cov.xml
testpaths = tests
